log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  labels:
    app: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        fsGroup: 10001
      volumes:
        - name: shared-logs
          emptyDir: {}
      containers:
        - name: log-writer
          image: log-writer:prod
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/files
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
        - name: log-reader
          image: log-reader:prod
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/files
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
